@@ -1,13 +1,8 @@
+@file:Suppress("VulnerableLibrariesLocal")
 
-import org.gradle.kotlin.dsl.assign
-import org.gradle.kotlin.dsl.invoke
 import org.apache.commons.io.FileUtils
 import org.jetbrains.changelog.Changelog
 import org.jetbrains.changelog.markdownToHTML
-import org.jetbrains.intellij.platform.gradle.IntelliJPlatformType
-import org.jetbrains.intellij.platform.gradle.TestFrameworkType
-import org.jetbrains.intellij.platform.gradle.models.ProductRelease
-import org.jetbrains.kotlin.com.intellij.util.io.URLUtil
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import org.w3c.dom.Document
 import java.lang.StringBuilder
@@ -21,6 +16,7 @@ import java.nio.file.Files
 import javax.xml.parsers.DocumentBuilderFactory
 import javax.xml.xpath.XPathConstants
 import javax.xml.xpath.XPathFactory
+import kotlin.script.experimental.api.ScriptDiagnostic
 
 interface Injected {
     @get:Inject val fs: FileSystemOperations
@@ -28,7 +24,7 @@ interface Injected {
 val injected = project.objects.newInstance<Injected>()
 fun properties(key: String) = providers.gradleProperty(key)
 fun environment(key: String) = providers.environmentVariable(key)
-
+fun project(key: String) = injected.fs[key].toString()
 
 // Import variables from gradle.properties file
 val pluginDownloadIdeaSources: String by project
@@ -56,98 +52,74 @@ val pluginIdeaVersion = detectBestIdeVersion()
 plugins {
     id("java") // Java support
     id("groovy")
-    id("application")
-    id("org.jetbrains.kotlin.jvm") version "2.0.0-Beta3"     // Kotlin support
-    id("org.jetbrains.intellij.platform") version "2.0.1"
+    id("org.jetbrains.kotlin.jvm") version "1.9.22"     // Kotlin support
+    id("org.jetbrains.intellij") version "1.17.1"    // Gradle IntelliJ Plugin
     id("org.jetbrains.changelog") version "2.2.0"    // Gradle Changelog Plugin "com.intellij.clion"
     id("org.jetbrains.qodana") version "0.1.13"    // Gradle Qodana Plugin
-    id("org.jetbrains.kotlinx.kover") version "0.9.0-RC"// Gradle Kover Plugin
+    id("org.jetbrains.kotlinx.kover") version "0.7.4"    // Gradle Kover Plugin
     kotlin("plugin.serialization") version "1.9.22"
 }
 
 
-group = providers.gradleProperty("pluginGroup").get()
-version = providers.gradleProperty("pluginVersion").get()
+group = properties("pluginGroup").get()
+version = properties("pluginVersion").get()
+
 
 repositories {
     mavenCentral()
+}
 
-    google()
+val junitVersion = "5.10.1"
+val junitPlatformLauncher = "1.10.1"
+
+
+val service = project.extensions.getByType<JavaToolchainService>()
+val customLauncher = service.launcherFor {
+        languageVersion.set(JavaLanguageVersion.of(17))
+}
+
+repositories {
+    maven("https://oss.sonatype.org/content/repositories/snapshots/")
     maven("https://packages.jetbrains.team/maven/p/ij/intellij-dependencies")
     maven("https://www.jetbrains.com/intellij-repository/releases")
+    maven("https://www.jetbrains.com/intellij-repository/snapshots")
+    maven("https://cache-redirector.jetbrains.com/intellij-dependencies")
     gradlePluginPortal()
-
-    // IntelliJ Platform Gradle Plugin Repositories Extension - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-repositories-extension.html
-    intellijPlatform {
-        defaultRepositories()
-    }
+    mavenCentral()
 }
 
 dependencies {
+// https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient
+
+    implementation("commons-httpclient:commons-httpclient:3.1")
+
     implementation("org.jetbrains:marketplace-zip-signer:0.1.24")
-    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.0-RC")
-    intellijPlatform {
-        intellijIdeaUltimate("2024.2")
-        bundledPlugin("JavaScript")
-        instrumentationTools()
-        pluginVerifier()
-        testFramework(TestFrameworkType.Platform)
-    }
-    testImplementation("junit:junit:4.13.2")
-    testImplementation("org.opentest4j:opentest4j:1.3.0")
+    implementation("org.jetbrains:annotations:24.1.0")
+    implementation("org.apache.commons:commons-lang3:3.14.0") // because no longer bundled with IDE
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2")
+
+    implementation("commons-codec:commons-codec:1.16.0") // for Hash
+    implementation("com.thedeanda:lorem:2.2") // for Lorem Ipsum
+
+    implementation("com.cronutils:cron-utils:9.2.1") // for cron expression parser https://github.com/jmrozanec/cron-utils
+    implementation("net.datafaker:datafaker:2.1.0") // for Data Faker
+
+    implementation("fr.marcwrobel:jbanking:4.2.0") // for IBAN generation
+    implementation("at.favre.lib:bcrypt:0.10.2") // for Bcrypt hash
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:$junitVersion")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:$junitPlatformLauncher")
 }
 
-
-tasks.named<Test>("test") {
-    useJUnitPlatform()
-}
-
-tasks.named("patchPluginXml") {
-    dependsOn("updatePluginXml")
-}
-
-tasks.named("patchPluginXml") {
-    // Ensure that we are in the right context (patchPluginXml task)
-    configure {
-        // Get the latest available change notes from the changelog file
-        changeNotes.set(
-            providers.gradleProperty("pluginVersion").map { pluginVersion ->
-                changelog.run {
-                    renderItem(
-                        (getOrNull(pluginVersion) ?: getUnreleased())
-                            .withHeader(false)
-                            .withEmptySections(false),
-                        Changelog.OutputType.HTML,
-                    )
-                }
-            }
-        )
-    }
-    doLast {
-        // Your logic here for patching the plugin XML, such as replacing sections in plugin.xml
-        updatePluginXml()
-    }
-}
-
-group = providers.gradleProperty("pluginGroup").get()
-version = providers.gradleProperty("pluginVersion").get()
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
-    }
-}
-
-// Set the JVM language level used to build the project.
-kotlin {
-    jvmToolchain(17)
-}
 abstract class UpdatePluginXml : DefaultTask() {
 
     @TaskAction
     fun action() {
         val generatedActionsXml = generateConsoleLoggerActionsXml()
         val pluginXmlFile = File("src/main/resources/META-INF/plugin.xml")
+
         doFirst {
             var pluginXmlContent = pluginXmlFile.readText()
 
@@ -158,122 +130,151 @@ abstract class UpdatePluginXml : DefaultTask() {
     }
 }
 
-// Configure IntelliJ Platform Gradle Plugin - read more: https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-extension.html
-intellijPlatform {
-    pluginConfiguration {
-        version = providers.gradleProperty("pluginVersion")
-    }
+// Configure Gradle IntelliJ Plugin
+// Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
+intellij {
 
+    pluginName = properties("pluginName")
+    version = properties("platformVersion")
+    type = properties("platformType")
 
-    val changelog = project.changelog // local variable for configuration cache compatibility
+    // Plugin Dependencies. Uses `platformPlugins` property from the gradle.properties file.
+    plugins = properties("platformPlugins").map { it.split(',').map(String::trim).filter(String::isNotEmpty) }
 
+    updateSinceUntilBuild.set(true)
 
-    ideaVersion {
-        sinceBuild = providers.gradleProperty("pluginSinceBuild")
-        untilBuild = providers.gradleProperty("pluginUntilBuild")
-    }
+    sandboxDir.set("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}")
 
+    downloadSources.set(!System.getenv().containsKey("IU"))
+    downloadSources.set(pluginDownloadIdeaSources.toBoolean() && !System.getenv().containsKey("IU"))
+    instrumentCode.set(true)
 
-    signing {
-        certificateChain = providers.environmentVariable("CERTIFICATE_CHAIN")
-        privateKey = providers.environmentVariable("PRIVATE_KEY")
-        password = providers.environmentVariable("PRIVATE_KEY_PASSWORD")
-    }
-
-    publishing {
-        token = providers.environmentVariable("PUBLISH_TOKEN")
-        // The pluginVersion is based on the SemVer (https://semver.org) and supports pre-release labels, like 2.1.7-alpha.3
-        // Specify pre-release label to publish the plugin in a custom Release Channel automatically. Read more:
-        // https://plugins.jetbrains.com/docs/intellij/deployment.html#specifying-a-release-channel
-        channels = providers.gradleProperty("pluginVersion").map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
-    }
-
-    pluginVerification {
-        ides {
-            ide(IntelliJPlatformType.WebStorm, "2024.2")
-            recommended()
-            select {
-                types = listOf(IntelliJPlatformType.WebStorm)
-                channels = listOf(ProductRelease.Channel.RELEASE)
-                sinceBuild = "232"
-                untilBuild = "242.*"
-            }
-        }
-    }
 }
-
 // Configure Gradle Changelog Plugin - read more: https://github.com/JetBrains/gradle-changelog-plugin
 changelog {
     groups.empty()
-    repositoryUrl = providers.gradleProperty("pluginRepositoryUrl")
     repositoryUrl = properties("pluginRepositoryUrl")
     headerParserRegex.set("(.*)".toRegex())
     itemPrefix.set("*")
 }
 
 // Configure Gradle Kover Plugin - read more: https://github.com/Kotlin/kotlinx-kover#configuration
-kover {
-    reports {
-        total {
-            xml {
-                onCheck = true
-            }
+koverReport {
+    defaults {
+        xml {
+            onCheck = true
         }
     }
 }
-tasks.register("updatePluginXml") {
-    val pluginXmlFile = file("src/main/resources/META-INF/plugin.xml")
-    val generatedActionsXml = generateConsoleLoggerActionsXml()
 
-    doFirst {
-        var pluginXmlContent = pluginXmlFile.readText()
+// Configure Gradle Qodana Plugin - read more: https://github.com/JetBrains/gradle-qodana-plugin
+qodana {
+    cachePath.set(file(".qodana").canonicalPath)
+    reportPath.set(file("build/reports/inspections").canonicalPath)
+    saveReport.set(true)
+    showReport.set(System.getenv("QODANA_SHOW_REPORT")?.toBoolean() ?: false)
+}
 
-        // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
-        description = providers.fileContents(layout.projectDirectory.file("README.md")).asText.map {
-            val start = "<!-- Plugin description -->"
-            val end = "<!-- Plugin description end -->"
-            pluginXmlContent = pluginXmlContent.replace("\${generatedActionsXml}", generatedActionsXml)
+// Set the JVM language level used to build the project.
+kotlin {
+    jvmToolchain(17)
+}
 
-            with(it.lines()) {
-                if (!containsAll(listOf(start, end))) {
-                    throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
-                }
-                subList(indexOf(start) + 1, indexOf(end)).joinToString("\n").let(::markdownToHTML)
-            }
-        }.get()
-
-        pluginXmlFile.writeText(pluginXmlContent)
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
     }
 }
 
-tasks.named("patchPluginXml") {
-    dependsOn("updatePluginXml")
-}
 tasks {
-    register("updatePluginXml") {
-        val pluginXmlFile = file("src/main/resources/META-INF/plugin.xml")
-        if (pluginXmlFile.exists()) {
-            val pluginXmlContent = pluginXmlFile.readText()
-            val generatedActionsXml = generateConsoleLoggerActionsXml()
+    register("clearSandboxedIDESystemLogs") {
+        val sandboxLogDir = File("${rootProject.projectDir}/.idea-sandbox/${shortenIdeVersion(pluginIdeaVersion)}/system/log/")
+        doFirst {
+            if (pluginClearSandboxedIDESystemLogsBeforeRun.toBoolean()) {
+                if (sandboxLogDir.exists() && sandboxLogDir.isDirectory) {
+                    FileUtils.deleteDirectory(sandboxLogDir)
+                    logger.quiet("Deleted sandboxed IDE's log folder $sandboxLogDir")
+                }
+            }
+        }
+    }
 
+    register("updatePluginXml") {
+        val generatedActionsXml = generateConsoleLoggerActionsXml()
+        val pluginXmlFile = File("src/main/resources/META-INF/plugin.xml")
+        var pluginXmlContent = pluginXmlFile.readText()
+        doFirst {
             pluginXmlContent = pluginXmlContent.replace("\${generatedActionsXml}", generatedActionsXml)
             pluginXmlFile.writeText(pluginXmlContent)
         }
     }
-    patchPluginXml {
-        patchPluginXml {
-            doFirst {
-                updatePluginXml()
-            }
-            version = providers.gradleProperty("pluginVersion").get()
-            sinceBuild = providers.gradleProperty("pluginSinceBuild").get()
-            untilBuild = providers.gradleProperty("pluginUntilBuild").get()
+
+
+
+    // Set the JVM compatibility versions
+    withType<JavaCompile> {
+        sourceCompatibility = pluginJavaVersion
+        targetCompatibility = pluginJavaVersion
+        options.compilerArgs = listOf("-Xlint:deprecation")
+        options.encoding = "UTF-8"
+    }
+    withType<org.jetbrains.kotlin.gradle.tasks.UsesKotlinJavaToolchain>().configureEach {
+        kotlinJavaToolchain.toolchain.use(customLauncher)
+    }
+    withType<KotlinCompile> {
+        kotlinOptions.jvmTarget = sourceCompatibility
+    }
+    withType<Test> {
+        useJUnitPlatform()
+
+        // avoid JBUIScale "Must be precomputed" error, because IDE is not started (LoadingState.APP_STARTED.isOccurred is false)
+        jvmArgs("-Djava.awt.headless=true")
+    }
+    withType<Test> {
+        useJUnitPlatform()
+
+        // avoid JBUIScale "Must be precomputed" error, because IDE is not started (LoadingState.APP_STARTED.isOccurred is false)
+        jvmArgs("-Djava.awt.headless=true")
+    }
+
+    runIde {
+        dependsOn("clearSandboxedIDESystemLogs")
+
+        maxHeapSize = "1g" // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.JavaExec.html
+
+        // force detection of slow operations in EDT when playing with sandboxed IDE (SlowOperations.assertSlowOperationsAreAllowed)
+        jvmArgs("-Dide.slow.operations.assertion=true")
+
+        if (pluginEnableDebugLogs.toBoolean()) {
+            systemProperties(
+                "idea.log.debug.categories" to "#com.github.bgomar.consolelogger"
+            )
         }
+
+        autoReloadPlugins.set(false)
+
+        // If any warning or error with missing --add-opens, wait for the next gradle-intellij-plugin's update that should sync
+        // with https://raw.githubusercontent.com/JetBrains/intellij-community/master/plugins/devkit/devkit-core/src/run/OpenedPackages.txt
+        // or do it manually
+    }
+    buildSearchableOptions {
+        enabled = false
+    }
+    wrapper {
+        gradleVersion = properties("gradleVersion").get()
+    }
+
+    patchPluginXml {
+        version = properties("pluginVersion")
+        sinceBuild = properties("pluginSinceBuild")
+        untilBuild = properties("pluginUntilBuild")
+        updatePluginXml()
         // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
         pluginDescription.set(
             file("README.md").readText().lines().run {
-                val start = "<!-- Plugin description -->".toString()
-                val end = "<!-- Plugin description end -->".toString()
+                val start = "<!-- Plugin description -->"
+                val end = "<!-- Plugin description end -->"
 
                 if (!containsAll(listOf(start, end))) {
                     throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
@@ -297,6 +298,20 @@ tasks {
     buildSearchableOptions {
         enabled = true
     }
+    compileKotlin {
+        kotlinOptions.jvmTarget = jvmTarget
+    }
+
+    compileTestKotlin {
+        kotlinOptions.jvmTarget  = jvmTarget
+    }
+
+    runIdeForUiTests {
+        systemProperty("robot-server.port", "8082")
+        systemProperty("ide.mac.message.dialogs.as.sheets", "false")
+        systemProperty("jb.privacy.policy.text", "<!--999.999-->")
+        systemProperty("jb.consents.confirmation.enabled", "false")
+    }
 
     signPlugin {
         certificateChainFile.set(file("./secrets/chain.crt"))
@@ -317,55 +332,6 @@ tasks {
             """
         )
     }
-
-
-    wrapper {
-        gradleVersion = providers.gradleProperty("gradleVersion").get()
-    }
-    withType<JavaCompile> {
-        sourceCompatibility = "17"
-        targetCompatibility = "17"
-    }
-    publishPlugin {
-        dependsOn(patchChangelog)
-    }
-}
-
-intellijPlatformTesting {
-    runIde {
-        register("runIdeForUiTests") {
-            task {
-                jvmArgumentProviders += CommandLineArgumentProvider {
-                    listOf(
-                        "-Drobot-server.port=8082",
-                        "-Dide.mac.message.dialogs.as.sheets=false",
-                        "-Djb.privacy.policy.text=<!--999.999-->",
-                        "-Djb.consents.confirmation.enabled=false",
-                    )
-                }
-            }
-
-            plugins {
-                robotServerPlugin()
-            }
-        }
-    }
-}
-
-/** Get IDE version from gradle.properties or, of wanted, find latest stable IDE version from JetBrains website. */
-fun detectBestIdeVersion(): String {
-    val pluginIdeaVersionFromProps = project.findProperty("pluginIdeaVersion")
-    if (pluginIdeaVersionFromProps.toString() == "IC-LATEST-STABLE") {
-        return "IC-${findLatestStableIdeVersion()}"
-    }
-    if (pluginIdeaVersionFromProps.toString() == "IU-LATEST-STABLE") {
-        return "IU-${findLatestStableIdeVersion()}"
-    }
-    return pluginIdeaVersionFromProps.toString()
-}
-
-operator fun Any.get(key: String): Any {
-    return key
 }
 
 
@@ -396,7 +362,7 @@ fun shortenIdeVersion(version: String): String {
 /** Find latest IntelliJ stable version from JetBrains website. Result is cached locally for 24h. */
 fun findLatestStableIdeVersion(): String {
     val t1 = System.currentTimeMillis()
-    val definitionsUrl: URLUtil = URI.parseServerAuthority("https://www.jetbrains.com/updates/updates.xml")
+    val definitionsUrl = URL("https://www.jetbrains.com/updates/updates.xml").toURI().toURL()
     val cachedLatestVersionFile = File(System.getProperty("java.io.tmpdir") + "/jle-ij-latest-version.txt")
     var latestVersion: String
     try {
@@ -464,8 +430,24 @@ fun readRemoteContent(url: URL): String {
     return content.toString()
 }
 
+/** Get IDE version from gradle.properties or, of wanted, find latest stable IDE version from JetBrains website. */
+fun detectBestIdeVersion(): String {
+    val pluginIdeaVersionFromProps = project.findProperty("pluginIdeaVersion")
+    if (pluginIdeaVersionFromProps.toString() == "IC-LATEST-STABLE") {
+        return "IC-${findLatestStableIdeVersion()}"
+    }
+    if (pluginIdeaVersionFromProps.toString() == "IU-LATEST-STABLE") {
+        return "IU-${findLatestStableIdeVersion()}"
+    }
+    return pluginIdeaVersionFromProps.toString()
+}
+
+operator fun Any.get(key: String): Any {
+    return key
+}
+
 fun generateConsoleLoggerActionsXml(): String {
-    val actionsXml: java.lang.StringBuilder = StringBuilder()
+    val actionsXml: StringBuilder = StringBuilder()
     actionsXml.append("<!-- Include actions XML -->\n")
     for (i in 1..9) {
         actionsXml.append(createActionXml(i))
@@ -481,7 +463,7 @@ fun generateConsoleLoggerActionsXml(): String {
 }
 
 fun createActionXml(i: Int): String {
-    val actionXml: java.lang.StringBuilder = StringBuilder()
+    val actionXml: StringBuilder = StringBuilder()
     actionXml.append("\n             <action id=\"com.github.bgomar.consolelogger.add").append(i).append("\" class=\"com.github.bgomar.consolelogger" +
             ".ConsoleLoggerAction").append("\"\n")
     actionXml.append("                    text=\"").append(i-1).append("\"\n")
